--- a/.editorconfig
+++ b/.editorconfig
@@ -48,7 +48,7 @@ dotnet_style_prefer_inferred_tuple_names = true:suggestion
 dotnet_style_prefer_inferred_anonymous_type_member_names = true:suggestion 
 dotnet_style_prefer_auto_properties = true:suggestion 
 dotnet_style_prefer_conditional_expression_over_assignment = true:suggestion
-dotnet_style_prefer_conditional_expression_over_return = true:suggestion
+dotnet_style_prefer_conditional_expression_over_return = false
 ############################### 
 # Naming Conventions          # 
 ############################### 
